[package]
name = "gdp-router"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capsule = "0.1"
toml = "0.5.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "3.2.8", features = ["derive"] }
local-ip-address = "0.4.4"