[package]
name = "gdp-router"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capsule = "0.1"
toml = "0.5.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "3.2.8", features = ["derive"] }
local-ip-address = "0.4.4"
tokio = { version = "=0.2.0-alpha.6", features = ["sync"] }
tokio-executor = { version = "=0.2.0-alpha.6", features = ["current-thread", "threadpool"] }
tokio-net = { version = "=0.2.0-alpha.6", features = ["signal"] }
tokio-timer = "=0.3.0-alpha.6"
pin-project = "1.0.8"
sha2 = "0.10"
chrono = "0.4"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
primitive-types = "0.11.1"